First commit :) (with errors)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Tuto1</string>
     <string name="welcome_name">Welcome Mareme</string>
+    <string name="switcher_pour_activer_le_mode_sombre">Switcher pour activer le mode sombre</string>
 </resources>
